spacing corrected

--- a/dataMapperLatest/style.css
+++ b/dataMapperLatest/style.css
@@ -224,12 +224,12 @@ a{
 	font-weight: 700;
 }
 .siteDetail .upperSection{
-	padding: 11px 9px 13px 18px;
+	padding: 12px 9px 13px 18px;
 	border-bottom: 1px solid #d4d4d4;
 	background: linear-gradient(#fefefe, #f7f7f7);
 }
 .surveyBox .upperSection{
-	padding: 9px 9px 9px 18px;
+	padding: 10px 9px 10px 18px;
 	border-bottom: 1px solid #d4d4d4;
 	background: linear-gradient(#fefefe, #f7f7f7);
 }
@@ -668,7 +668,7 @@ display: block;
 }
 
 .activityBox ul li{
-    padding: 15px 20px 16px 20px;
+    padding: 16px 20px 16px 20px;
     border-bottom: 1px solid #d1d1d1;
 }
 .blackText{
